优化提取脚本extract.py，更新符号加载逻辑，增加已上币状态标记，并在Markdown报告中显示符号状态；修正部分文档中的符号名称，提升一致性和可读性。

--- a/advices/all-platforms/advice_20250506.md
+++ b/advices/all-platforms/advice_20250506.md
@@ -127,7 +127,7 @@
 |----------------|---------|---------------|---------------|---------------|--------|-------------|
 | Fartcoin       | FARTCOIN| $134,163,248  | $1,134,799,528| $1,134,801,507| 1.00   | 7.26        |
 | ai16z          | AI16Z   | $97,787,521   | $286,393,653  | $286,393,997  | 1.00   | 6.91        |
-| Popcat (SOL)   | POPCAT  | $110,828,543  | $376,781,470  | $376,781,484  | 1.00   | 6.72        |
+| Popcat (Popcat)   | POPCAT  | $110,828,543  | $376,781,470  | $376,781,484  | 1.00   | 6.72        |
 
 #### 2. 核心优势
 - **Fartcoin**:  
@@ -138,7 +138,7 @@
   - **短期价格稳定**：24h/7d价格波动仅±1.76%/-3.93%。  
   - **交易量趋势健康**：7d交易量环比增长7.5%。  
 
-- **Popcat (SOL)**:  
+- **Popcat (Popcat)**:  
   - **高流动性**：VOL/MC比率达0.29，反映市场深度充足。  
   - **Meme赛道热度**：动物主题标签强化社区共识。  
 
@@ -151,7 +151,7 @@
   - **长期价格波动**：30天涨幅104%，需警惕获利抛压。  
   - **AI赛道竞争**：同类项目技术同质化可能削弱护城河。  
 
-- **Popcat (SOL)**:  
+- **Popcat (Popcat)**:  
   - **短期交易量下滑**：7d交易量较30天均值下降33%。  
   - **社区驱动风险**：依赖热度维持，长期价值支撑不足。  
 
@@ -214,10 +214,10 @@
 
 ---
 
-#### 3. Popcat (SOL) (POPCAT)
+#### 3. Popcat (POPCAT)
 | 代币名称     | 代码   | 24h交易量     | 市值          | FDV           | MC/FDV | 交易量得分 | 价格稳定性得分 | 合规性得分 | 代币分配得分 | 总评分 |
 |--------------|--------|---------------|---------------|---------------|--------|------------|----------------|------------|--------------|--------|
-| Popcat (SOL) | POPCAT | $110,828,543  | $376,781,470  | $376,781,484  | 1.00   | 2.62       | 2.10           | 1.00       | 1.00         | 6.72   |
+| Popcat | POPCAT | $110,828,543  | $376,781,470  | $376,781,484  | 1.00   | 2.62       | 2.10           | 1.00       | 1.00         | 6.72   |
 
 ##### 四大因素加权分析
 - **交易量表现（45%）**：  
