--- a/advices/all-platforms/advice_20250426.md
+++ b/advices/all-platforms/advice_20250426.md
@@ -116,7 +116,7 @@
 
 | 代币名称       | 代码       | 24h交易量   | 市值       | FDV         | MC/FDV | 交易量得分 (45%) | 价格稳定性得分 (35%) | 合规性得分 (10%) | 代币分配得分 (10%) | 总评分 |
 |----------------|------------|-------------|------------|-------------|--------|-------------------|-----------------------|-------------------|---------------------|--------|
-| Popcat (SOL)   | POPCAT     | $250.08M    | $380.50M   | $380.50M    | 1.00   | 8.1               | 4.9                  | 7.0               | 10.0               | 7.15   |
+| Popcat (Popcat)   | POPCAT     | $250.08M    | $380.50M   | $380.50M    | 1.00   | 8.1               | 4.9                  | 7.0               | 10.0               | 7.15   |
 | Fartcoin       | FARTCOIN   | $274.70M    | $1,014.20M | $1,014.20M  | 1.00   | 9.0               | 3.5                  | 7.0               | 10.0               | 7.10   |
 | Grass          | GRASS      | $70.18M     | $428.88M   | $1,758.41M  | 0.24   | 6.0               | 8.8                  | 9.0               | 2.4                | 6.64   |
 
