--- a/advices/all-platforms/advice_20250429.md
+++ b/advices/all-platforms/advice_20250429.md
@@ -96,7 +96,7 @@
 
 | 代币名称          | 代码      | 24h交易量     | 市值         | FDV          | MC/FDV | 交易量得分 (45%) | 价格稳定性得分 (35%) | 合规性得分 (10%) | 代币分配得分 (10%) | 总评分 |
 |-------------------|-----------|---------------|--------------|--------------|--------|-------------------|-----------------------|-------------------|---------------------|--------|
-| Popcat (SOL)      | POPCAT    | $225,140,989  | $377,074,558 | $377,074,572 | 1.00   | 8.0               | 4.0                   | 5.0               | 10.0                | 6.50   |
+| Popcat (Popcat)      | POPCAT    | $225,140,989  | $377,074,558 | $377,074,572 | 1.00   | 8.0               | 4.0                   | 5.0               | 10.0                | 6.50   |
 | Grass             | GRASS     | $32,896,786   | $398,270,729 | $1,632,892,234 | 0.24   | 5.0               | 9.0                   | 8.0               | 2.0                 | 6.40   |
 | Drift             | DRIFT     | $41,270,026   | $162,803,119 | $547,115,812   | 0.30   | 6.0               | 7.0                   | 9.0               | 3.0                 | 6.35   |
 
